--- a/css/myCSS/index.css
+++ b/css/myCSS/index.css
@@ -3,7 +3,7 @@
     font-size: 1rem;
     margin-right: 40px;
     text-decoration: none;
-    /* position: relative; */
+    position: relative;
     font-weight: bold;
 }
 
@@ -15,7 +15,86 @@
     font-size: 1.2rem;
 }
 
-.navbar-collapse .navbar-nav {
+.navbar-collapse .navbar-nav .linknya::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -10%;
+    width: 100%;
+    height: 3px;
+    background: #fff;
+    border-radius: 5px;
+    transform: scaleX(0);
+    transition: transform .5s;
+}
+
+.navbar-collapse .navbar-nav .linknya:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
+}
+
+.teks-tengah {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.judul {
+    font-weight: bold;
+    color: black;
+}
+
+.wadah {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.pembungkus-kartu {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.kartu {
+    background-color: white;
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    transition: transform 0.3s;
+}
+
+.kartu:hover {
+    transform: translateY(-10px);
+}
+
+.gambar-kartu {
+    width: 150px;
+    height: auto;
+    margin-top: 10px;
+}
+
+.isi-kartu {
+    margin-top: 20px;
+}
+
+.judul-kartu {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 10px;
+    color: black;
+}
+
+.teks-kartu {
+    font-weight: 400;
+    margin-top: 20px;
+    color: black;
+}
+
+/* .navbar-collapse .navbar-nav {
     position: relative;
 }
 
@@ -24,13 +103,13 @@
     position: absolute;
     bottom: -5px;
     /* Position the line below the text */
-    /* left: 0;
+/* left: 0;
     width: 100%;
     height: 3px;
     background: #fff;  */
-    /* Set the color of the line */
-     /* border-radius: 5px;
-} */ 
+/* Set the color of the line */
+/* border-radius: 5px;
+} 
 
 
 .navbar-collapse .navbar-nav .linknya::after {
@@ -56,4 +135,4 @@
     .ilust1 {
         display: none;
     }
-}
+} */
