--- a/views/home.html
+++ b/views/home.html
@@ -11,16 +11,16 @@
 
   <title>PuskeSmart</title>
   <!-- My CSS -->
-  <link rel="stylesheet" href="css/myCSS/index.css">
+  <link rel="stylesheet" href="../css/myCSS/home.css">
 
   <!-- Custom fonts for this template-->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="../vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link
     href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
     rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="../css/sb-admin-2.min.css" rel="stylesheet">
 
   <!-- My font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,10 +35,10 @@
 
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #68A3F3;">
-    <div class="container-md p-3">
+    <div class="container-lg p-3">
       <!-- Logo -->
       <div>
-        <img src="img/asset/logo.png" alt="Logo" class="" style="width: auto; height: 40px;">
+        <img src="../img/asset/logo.png" alt="Logo" class="" style="width: auto; height: 40px;">
       </div>
 
       <!-- Toggler for mobile view -->
@@ -51,22 +51,22 @@
       <!-- Navbar links centered with mx-auto -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mx-auto">
-          <a class="nav-tengah linknya" href="/login.html">Beranda</a>
-          <a class="nav-tengah linknya" href="/login.html">Pendaftaran</a>
-          <a class="nav-tengah linknya" href="/login.html">Informasi</a>
-          <a class="nav-tengah linknya" href="/login.html">Ulasan</a>
+          <a class="nav-tengah linknya" href="home.html" style="font-size: 20px;">Beranda</a>
+          <a class="nav-tengah linknya" href="pendaftaran.html" style="font-size: 20px;">Pendaftaran</a>
+          <a class="nav-tengah linknya" href="#" style="font-size: 20px;">Informasi</a>
+          <a class="nav-tengah linknya" href="#" style="font-size: 20px;">Ulasan</a>
         </div>
 
         <!-- Masuk button aligned to the right -->
-        <a class="tombol nav-link btn btn-success font-weight-bold shadow" href="/login.html"
-          style="color: aliceblue; font-size: 1.2rem;">Masuk</a>
+        <a class="tombol nav-link btn btn-primary font-weight-bold shadow" href="akun.html"
+          style="color: aliceblue; font-size: 1.2rem;">Akun</a>
       </div>
     </div>
   </nav>
   <!-- End Navbar -->
 
   <!-- Section 1 -->
-  <div class="csc1 container-md mt-5">
+  <div class="csc1 container-lg mt-5">
     <div class="row align-items-center mb-5">
       <div class="col-md-8">
         <h1 class="mainTitle font-weight-bold " style="font-size: 35px; color: black;">Selamat Datang di <br> PuskeSmart
@@ -74,13 +74,13 @@
         <h2 class="subTitle " style="font-size: 20px; font-weight: 400; color: black">
           Temukan informasi layanan, jadwal dokter, dan kemudahan pendaftaran berobat dalamsatu genggaman.
         </h2>
-        <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;"
+        <button class="btnSection1 btn mt-3 rounded-pill p-3 text-white" 
           data-toggle="modal" data-target="#modalSatu">
           Cari Tahu Lebih Lanjut
         </button>
       </div>
       <div class="col-md-4 d-none d-md-block img-fluid text-right mt-4 mt-md-0" style="width: 300px;">
-        <img src="img/asset/ilustrasi 1.png" alt="Ilustrasi" class="" style="max-width: 250px;" id="ilust1">
+        <img src="../img/asset/ilustrasi 1.png" alt="Ilustrasi" class="" style="max-width: 250px;" id="ilust1">
       </div>
     </div>
   </div>
@@ -88,10 +88,10 @@
 
   <!-- Section 2 -->
   <div class="py-5" style="background-color: #97C0F7;">
-    <div class="container-md">
+    <div class="container-lg">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left mb-4 mb-md-0">
-          <img src="img/asset/ilustrasi 2.png" alt="Ilustrasi" class="ilust2 img-fluid d-none d-md-block"
+          <img src="../img/asset/ilustrasi 2.png" alt="Ilustrasi" class="ilust2 img-fluid d-none d-md-block"
             style="max-width: 250px;">
         </div>
         <div class="col-md-6">
@@ -107,7 +107,7 @@
               <li class="mb-2">Dokter dan Tenaga Medis Berpengalaman</li>
               <li class="mb-2">Fasilitas Lengkap dan Modern</li>
             </ul>
-            <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;"
+            <button class="btnSection2 btn mt-3 rounded-pill p-3 text-white"
               data-toggle="modal" data-target="#modalDua">
               Baca Selengkapnya
             </button>
@@ -126,21 +126,21 @@
     <div class="wadah">
       <div class="pembungkus-kartu">
         <div class="kartu">
-          <img src="img/asset/card1.png" alt="poli umum" class="gambar-kartu">
+          <img src="../img/asset/card1.png" alt="poli umum" class="gambar-kartu">
           <div class="isi-kartu">
             <h1 class="judul-kartu">Poli Umum</h1>
             <p class="teks-kartu">Konsultasi kesehatan umum dan pemeriksaan dasar</p>
           </div>
         </div>
         <div class="kartu">
-          <img src="img/asset/card3.png" alt="poli gigi" class="gambar-kartu">
+          <img src="../img/asset/card3.png" alt="poli gigi" class="gambar-kartu">
           <div class="isi-kartu">
             <h1 class="judul-kartu">Poli Gigi</h1>
             <p class="teks-kartu">Perawatan kesehatan gigi dan mulut untuk semua usia</p>
           </div>
         </div>
         <div class="kartu">
-          <img src="img/asset/card2.png" alt="poli anak" class="gambar-kartu">
+          <img src="../img/asset/card2.png" alt="poli anak" class="gambar-kartu">
           <div class="isi-kartu">
             <h1 class="judul-kartu">Poli Bidan</h1>
             <p class="teks-kartu">Layanan untuk ibu hamil dan persiapan persalinan</p>
@@ -176,7 +176,7 @@
               <div class="testi-item carousel-item active shadow-sm rounded p-5 mb-5"
                 style="background-color: #C6DCFA;">
                 <div class="testi-author-info d-flex align-items-center">
-                  <img src="img/asset/testimonial/1.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                  <img src="../img/asset/testimonial/1.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
@@ -200,7 +200,7 @@
               <!-- testi item start 2-->
               <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5" style="background-color: #C6DCFA;">
                 <div class="testi-author-info d-flex align-items-center">
-                  <img src="img/asset/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                  <img src="../img/asset/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
@@ -224,7 +224,7 @@
               <!-- testi item start 3-->
               <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5" style="background-color: #C6DCFA;">
                 <div class="testi-author-info d-flex align-items-center">
-                  <img src="img/asset/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                  <img src="../img/asset/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
@@ -258,7 +258,7 @@
     <div class="container-lg">
       <div class="row gx-5 py-5">
         <div class="col-lg-6">
-          <div class="footer-brand mb-2"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;">
+          <div class="footer-brand mb-2"><img src="../img/asset/logoVer.png" alt="" style="width: auto; height: 40px;">
           </div>
           <!-- Almat -->
           <div class="d-flex align-items-center">
@@ -411,25 +411,25 @@
   <!-- End Modal -->
 
   <!-- My JS -->
-  <script src="js/myJS/index.js"></script>
+  <script src="../js/myJS/home.js"></script>
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/3659f450a4.js" crossorigin="anonymous"></script>
   <!-- Bootstrap core JavaScript-->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="js/sb-admin-2.min.js"></script>
+  <script src="../js/sb-admin-2.min.js"></script>
 
   <!-- Page level plugins -->
-  <script src="vendor/chart.js/Chart.min.js"></script>
+  <script src="../vendor/chart.js/Chart.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="js/demo/chart-area-demo.js"></script>
-  <script src="js/demo/chart-pie-demo.js"></script>
+  <script src="../js/demo/chart-area-demo.js"></script>
+  <script src="../js/demo/chart-pie-demo.js"></script>
 
 </body>
 
