--- a/views/register.html
+++ b/views/register.html
@@ -89,7 +89,7 @@
 
                         <!-- Register link -->
                         <p class="text-center font-weight-bold text-dark" style="font-size: 1rem;">
-                            Sudah punya akun? <a href="/login.html" class="font-weight-bold text-primary ml-1">Masuk di sini</a>
+                            Sudah punya akun? <a href="login.html" class="font-weight-bold text-primary ml-1">Masuk di sini</a>
                         </p>
                     </form>
                 </div>
