--- a/views/akun.html
+++ b/views/akun.html
@@ -94,29 +94,29 @@
           <!-- NIK -->
           <div class="form-group">
             <label for="nik" style="font-weight: bold; color: black;">NIK</label>
-            <input type="type" class="form-control" id="nik" style="border: 1px solid black;" name="nik">
+            <input type="type" class="form-control" id="nik" style="border: 1px solid black;" name="nik" value="">
             <small id="nik" class="form-text text-muted">Kami akan menjaga privasi NIK anda.</small>
           </div>
           <!-- nama Lengkap -->
           <div class="form-group">
             <label for="namaLengkap" style="font-weight: bold; color: black;">Nama Lengkap</label>
             <input type="text" class="form-control" id="namaLengkap" style="border: 1px solid black;"
-              name="namaLengkap">
+              name="namaLengkap" value="">
           </div>
           <!-- Username -->
           <div class="form-group">
             <label for="userName" style="font-weight: bold; color: black;">Username</label>
-            <input type="text" class="form-control" id="userName" style="border: 1px solid black;" name="username">
+            <input type="text" class="form-control" id="userName" style="border: 1px solid black;" name="username" value="agus">
           </div>
           <!-- email -->
           <div class="form-group">
             <label for="email" style="font-weight: bold; color: black;">Email</label>
-            <input type="email" class="form-control" id="email" style="border: 1px solid black;" name="email">
+            <input type="email" class="form-control" id="email" style="border: 1px solid black;" name="email" value="agus@gamil.com">
           </div>
           <!-- Alamat -->
           <div class="form-group">
             <label for="alamat" style="font-weight: bold; color: black;">Alamat</label>
-            <input type="text" class="form-control" id="alamat" style="border: 1px solid black;" name="alamat">
+            <input type="text" class="form-control" id="alamat" style="border: 1px solid black;" name="alamat" value="">
           </div>
         </div>
 
@@ -125,12 +125,12 @@
           <div class="form-group">
             <label for="notlp" style="font-weight: bold; color: black;">No Telp</label>
             <input type="text" class="form-control" id="notlp" style="border: 1px solid black; margin-bottom: 39px;"
-              name="notelp">
+              name="notelp" value="">
           </div>
           <!-- Tanggal Lahir -->
           <div class="form-group">
             <label for="tanggalLahir" style="font-weight: bold; color: black;">Tanggal Lahir</label>
-            <input type="date" class="form-control" id="tanggalLahir" style="border: 1px solid black;" name="date">
+            <input type="date" class="form-control" id="tanggalLahir" style="border: 1px solid black;" name="date" value="">
           </div>
           <button type="submit" class="btn btn-success float-right" style="margin-top: 205px; font-weight: 600;">Update
             Profil</button>
