--- a/views/index.html
+++ b/views/index.html
@@ -51,14 +51,14 @@
       <!-- Navbar links centered with mx-auto -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mx-auto">
-          <a class="nav-tengah linknya" href="index.html" style="font-size: 20px;">Beranda</a>
-          <a class="nav-tengah linknya" href="login.html" style="font-size: 20px;">Pendaftaran</a>
-          <a class="nav-tengah linknya" href="login.html" style="font-size: 20px;">Informasi</a>
-          <a class="nav-tengah linknya" href="login.html" style="font-size: 20px;">Ulasan</a>
+          <a class="nav-tengah linknya" href="index" style="font-size: 20px;">Beranda</a>
+          <a class="nav-tengah linknya" href="login" style="font-size: 20px;">Pendaftaran</a>
+          <a class="nav-tengah linknya" href="login" style="font-size: 20px;">Informasi</a>
+          <a class="nav-tengah linknya" href="login" style="font-size: 20px;">Ulasan</a>
         </div>
 
         <!-- Masuk button aligned to the right -->
-        <a class="tombol nav-link btn btn-success font-weight-bold shadow" href="login.html"
+        <a class="tombol nav-link btn btn-success font-weight-bold shadow" href="login"
           style="color: aliceblue; font-size: 1.2rem;">Masuk</a>
       </div>
     </div>
